
API Changes
---------------------
(No changes)

New Features
---------------------
(No changes)

Improvements
---------------------

* LUCENE-9662: Make CheckIndex concurrent by parallelizing index check across segments.
  (Zach Chen, Mike McCandless, Dawid Weiss, Robert Muir)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------
(No changes)

Build
---------------------

* LUCENE-10104, SOLR-15631: Upgrade forbiddenapis to version 3.2.  (Uwe Schindler)

Other
---------------------

* LUCENE-10098: Add docs/links to GermanAnalyzer describing how to decompound nouns. (Robert Muir)

======================= Lucene 8.10.0 =======================

API Changes
---------------------

* LUCENE-9962: DrillSideways allows sub-classes to provide "drill down" FacetsCollectors. They
  may provide a null collector if they choose to bypass "drill down" facet collection. (Greg Miller)

* LUCENE-9902: Change the getValue method from IntTaxonomyFacets to be protected instead of private.
  Users can now access the count of an ordinal directly without constructing an extra FacetLabel.
  Also use variable length arguments for the getOrdinal call in TaxonomyReader. (Gautam Worah)

* LUCENE-10036: Replaced the ScoreCachingWrappingScorer ctor with a static factory method that
  ensures unnecessary wrapping doesn't occur. (Greg Miller)

* LUCENE-10027: Add a new Directory reader open API from indexCommit and
  a custom comparator for sorting leaf readers (Mayya Sharipova).

* LUCENE-7020: TieredMergePolicy#setMaxMergeAtOnceExplicit is deprecated
  and the number of segments that get merged via explicit merges is unlimited
  by default. (Adrien Grand, Shawn Heisey)

New Features
---------------------
* LUCENE-10083: Analyzer and stemmer for Telugu language (Vinod Singh)

* LUCENE-10035: The SimpleText codec now writes skip lists.
  (wuda via Adrien Grand)

Improvements
---------------------
