@@ -25,10 +25,14 @@ import java.util.List;
 import org.apache.lucene.index.LeafReaderContext;
 
 /**
- * A {@link Collector} which allows running a search with several
- * {@link Collector}s. It offers a static {@link #wrap} method which accepts a
- * list of collectors and wraps them with {@link MultiCollector}, while
- * filtering out the <code>null</code> null ones.
+ * A {@link Collector} which allows running a search with several {@link Collector}s. It offers a
+ * static {@link #wrap} method which accepts a list of collectors and wraps them with {@link
+ * MultiCollector}, while filtering out the <code>null</code> null ones.
+ *
+ * <p><b>NOTE:</b>When mixing collectors that want to skip low-scoring hits ({@link
+ * ScoreMode#TOP_SCORES}) with ones that require to see all hits, such as mixing {@link
+ * TopScoreDocCollector} and {@link TotalHitCountCollector}, it should be faster to run the query
+ * twice, once for each collector, rather than using this wrapper on a single search.
  */
 public class MultiCollector implements Collector {
 
@@ -48,7 +52,7 @@ public class MultiCollector implements Collector {
    * <li>Otherwise the method returns a {@link MultiCollector} which wraps the
    * non-<code>null</code> ones.
    * </ul>
-   * 
+   *
    * @throws IllegalArgumentException
    *           if either 0 collectors were input, or all collectors are
    *           <code>null</code>.
@@ -87,7 +91,7 @@ public class MultiCollector implements Collector {
       return new MultiCollector(colls);
     }
   }
-  
+
   private final boolean cacheScores;
   private final Collector[] collectors;
 
@@ -118,6 +122,7 @@ public class MultiCollector implements Collector {
   @Override
   public LeafCollector getLeafCollector(LeafReaderContext context) throws IOException {
     final List<LeafCollector> leafCollectors = new ArrayList<>(collectors.length);
+    ScoreMode leafScoreMode = null;
     for (Collector collector : collectors) {
       final LeafCollector leafCollector;
       try {
@@ -126,15 +131,24 @@ public class MultiCollector implements Collector {
         // this leaf collector does not need this segment
         continue;
       }
+      if (leafScoreMode == null) {
+        leafScoreMode = collector.scoreMode();
+      } else if (leafScoreMode != collector.scoreMode()) {
+        leafScoreMode = ScoreMode.COMPLETE;
+      }
       leafCollectors.add(leafCollector);
     }
-    switch (leafCollectors.size()) {
-      case 0:
-        throw new CollectionTerminatedException();
-      case 1:
+    if (leafCollectors.isEmpty()) {
+      throw new CollectionTerminatedException();
+    } else {
+      // Wraps single leaf collector that wants to skip low-scoring hits (ScoreMode.TOP_SCORES)
+      // but the global score mode doesn't allow it.
+      if (leafCollectors.size() == 1
+          && (scoreMode() == ScoreMode.TOP_SCORES || leafScoreMode != ScoreMode.TOP_SCORES)) {
         return leafCollectors.get(0);
-      default:
-        return new MultiLeafCollector(leafCollectors, cacheScores, scoreMode() == ScoreMode.TOP_SCORES);
+      }
+      return new MultiLeafCollector(
+          leafCollectors, cacheScores, scoreMode() == ScoreMode.TOP_SCORES);
     }
   }
 
@@ -210,9 +224,9 @@ public class MultiCollector implements Collector {
     }
 
   }
-  
+
   final static class MinCompetitiveScoreAwareScorable extends FilterScorable {
-    
+
     private final int idx;
     private final float[] minScores;
 
@@ -221,7 +235,7 @@ public class MultiCollector implements Collector {
       this.idx = idx;
       this.minScores = minScores;
     }
-    
+
     @Override
     public void setMinCompetitiveScore(float minScore) throws IOException {
       if (minScore > minScores[idx]) {
@@ -239,7 +253,7 @@ public class MultiCollector implements Collector {
       }
       return min;
     }
-    
+
   }
 
 }
